--- a/projects.json
+++ b/projects.json
@@ -1,30 +1,35 @@
 {"projects":[
     {
       "name":"The Black And White",
+      "i":"img1",
       "description":"I am the webmaster of my schools newspaper website",
       "link":"https://www.theblackandwhite.net",
       "picture":"images/blackandwhite.png"
     },
     {
       "name":"Snatched Daily",
+      "i":"img2",
       "description":"A news website I was hired to help with",
       "link":"https://www.snatcheddaily.com",
       "picture":"images/snatcheddaily.png"
     },
     {
       "name":"Team 1389",
+      "i":"img3",
       "description":"The FRC robotics team that I am on, I help with programming and mechanical work",
       "link":"https://www.team1389.com",
       "picture":"images/team1389.png"
     },
     {
-      "name":"Github",
-      "description":"This is just my github, which has most of my smaller programming projects",
-      "link":"https://github.com/c-hering",
+      "name":"GlenMarPark",
+      "i":"img4",
+      "description":"This was a commisioned website for a park association.",
+      "link":"https://glenmarpark.org",
       "picture":"images/githubacc.png"
     },
     {
       "name":"Isolated GS",
+      "i":"img5",
       "description":"This is a game I started working on, yet sadly was stopped, due to school",
       "link":"https://www.isoloatedgs.weebly.com",
       "picture":"images/isolated.png"
