fixed errors with openeing websites from click

--- a/projects.json
+++ b/projects.json
@@ -10,28 +10,28 @@
       "name":"Snatched Daily",
       "i":"img2",
       "description":"A news website I was hired to help with",
-      "link":"https://www.snatcheddaily.com",
+      "link":"http://www.snatcheddaily.com",
       "picture":"images/snatcheddaily.png"
     },
     {
       "name":"Team 1389",
       "i":"img3",
       "description":"The FRC robotics team that I am on, I help with programming and mechanical work",
-      "link":"https://www.team1389.com",
+      "link":"http://www.team1389.com",
       "picture":"images/team1389.png"
     },
     {
       "name":"GlenMarPark",
       "i":"img4",
       "description":"This was a commisioned website for a park association.",
-      "link":"https://glenmarpark.org",
+      "link":"http://glenmarpark.org",
       "picture":"images/githubacc.png"
     },
     {
       "name":"Isolated GS",
       "i":"img5",
       "description":"This is a game I started working on, yet sadly was stopped, due to school",
-      "link":"https://www.isoloatedgs.weebly.com",
+      "link":"http://www.isoloatedgs.weebly.com",
       "picture":"images/isolated.png"
     }
 ]}
